# openGLPractice

./: CMakeLists.txt  main.cpp  vertexShader.vert
resources/: fragmentShader.frag  vertexShader.vert
